--- a/examples/simple.cf.yaml
+++ b/examples/simple.cf.yaml
@@ -2,13 +2,10 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: 'Sample CF for Secure SSM'
 
 Resources:
-  AnotherSampleSecureSSM:
+  SampleSecureSSMParam:
     Type: RP::SSM::SecureParameter
     Properties:
       Description: "Sample secure ssm"
       Name: "/sample/secure/ssm"
       Value: "secret"
       KeyId: "alias/aws/ssm"
-      Tags:
-        - "key1": "value1"
-        - "key2": "value2"
