--- a/.github/workflows/secure-ssm.yml
+++ b/.github/workflows/secure-ssm.yml
@@ -19,14 +19,8 @@ jobs:
       GOLANGCI_LINT_VER: v1.21.0
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
-        target_arch: [arm, amd64]
-        include:
-          - os: ubuntu-latest
-            target_os: linux
-        exclude:
-          - os: macOS-latest
-            target_arch: arm
+        os: [ubuntu-latest]
+        target_arch: [amd64]
     steps:
       - name: Set up Go ${{ env.GOVER }}
         uses: actions/setup-go@v1
@@ -35,15 +29,9 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
       - name: Install golangci-lint ${{ env.GOLANGCI_LINT_VER }}
-        if: matrix.target_arch != 'arm'
         run: |
           curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b "${{ env.GOROOT }}/bin" "${{ env.GOLANGCI_LINT_VER }}"
       - name: Run make lint
-        if: matrix.target_arch != 'arm'
         run: make lint
-      - name: Run make go.mod check-diff
-        if: matrix.target_arch != 'arm'
-        run: make go.mod check-diff
       - name: Run make test
-        if: matrix.target_arch != 'arm'
         run: make test
