--- a/.rpdk-config
+++ b/.rpdk-config
@@ -5,6 +5,8 @@
     "entrypoint": "handler",
     "testEntrypoint": "handler",
     "settings": {
-        "importpath": "github.com/sayboras/aws-cloudformation-resource-providers-ssm-secure-param"
+        "importpath": "github.com/sayboras/aws-cloudformation-resource-providers-ssm-secure-param",
+        "protocolVersion": "1.0",
+        "pluginVersion": "0.1.3"
     }
 }
